tweaking spacing and padding for footer, making header and footer fixed.

--- a/css/resume_site.css
+++ b/css/resume_site.css
@@ -28,7 +28,6 @@
 
 .headerLeft {
     width: 42%;
-    font-size: 1.1em;
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -37,7 +36,6 @@
 
 #title {
     font-weight: 200;
-    font-size: .8em;
 }
 
 .headerRight {
@@ -229,9 +227,8 @@ button {
     width: 35%;
     display: flex;
     justify-content: space-evenly;
-    /* margin-right: 48px; */
     margin-top: 18px;
-    padding-left: 5px;
+    margin-right: 15px;
 }
 
 .footerContent {
